--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 text_color_theme: forest # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 url: # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
-title: Dojune's blog
+title: bb
 description: > # this means to ignore newlines until "Language & timezone"
-  Dojune's Blog
+  aa
 
 
 ## => Language and Timezone
