--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,10 @@
 text_color_theme: forest # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 url: # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
-title: bb
+title: # DJ's blog
 description: > # this means to ignore newlines until "Language & timezone"
-  aa
+  # My blog
+  
 
 
 ## => Language and Timezone
