--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 text_color_theme: forest # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 url: # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
-title: # DJ's blog
+title: Dojune's blog
 description: > # this means to ignore newlines until "Language & timezone"
   # My blog
   
