--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,10 @@
 header:
   - titles:
       en:       Archive
-      zh:       归档
-      zh-Hans:  归档
-      zh-Hant:  歸檔
     url:        /archive.html
   - titles:
-      en:       About
-      zh:       关于
-      zh-Hans:  关于
-      zh-Hant:  關於
-    url:        /about.html
+      en:       About Blog
+    url:        /about_blog.html
+  - titles:
+      en:       About Me
+    url:        /about_me.html
