--- a/_config.yml
+++ b/_config.yml
@@ -146,15 +146,15 @@ exclude:
   - /test
   - /vendor
 
-defaults:
-  - scope:
-      path: ""
-      type: posts
-    values:
-      license: true
-      aside:
-        toc: true
-      pageview: true
+#defaults:
+#  - scope:
+#      path: ""
+#      type: posts
+#    values:
+#      license: true
+#      aside:
+#        toc: true
+#      pageview: true
 
 
 ## => Plugins
@@ -168,3 +168,18 @@ plugins:
 
 # pagination
 paginate: 8
+
+
+# for tag
+collections:
+  tags:
+    output: true
+    permalink: /tags/:path/
+
+defaults:
+  - scope:
+      path: ''
+      type: tags
+    values:
+      layout: tag
+
