--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 ## => Site Settings
 ##############################
-text_color_theme: okukryol # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+text_color_theme: okukryol # "default" (default), "dark", "forest", "ocean", "chocolate", "orange" , "okukryol"
 url: # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
 title: Dojune's Blog
