--- a/_config.yml
+++ b/_config.yml
@@ -118,9 +118,14 @@ leancloud:
 ## => Analytics
 ##############################
 ## Google Analytics
-ga_tracking_id: UA-121680114-1 # Google Analytics id for the site
-ga_anonymize_ip: false # Anonymize IP tracking for Analytics
+# ga_tracking_id: UA-121680114-1 # Google Analytics id for the site
+# ga_anonymize_ip: false # Anonymize IP tracking for Analytics
 
+analytics:
+  provider: google
+  google:
+    tracking_id: UA-121680114-1
+    anonymize_ip: false
 
 ## => Build
 ##############################
