--- a/_config.yml
+++ b/_config.yml
@@ -117,15 +117,15 @@ leancloud:
 
 ## => Analytics
 ##############################
-## Google Analytics
-# ga_tracking_id: UA-121680114-1 # Google Analytics id for the site
-# ga_anonymize_ip: false # Anonymize IP tracking for Analytics
-
 analytics:
-  provider: google
+  provider: google # false (default), "google", "custom"
+
+  ## Google Analytics
   google:
-    tracking_id: UA-121680114-1 
-    anonymize_ip: true
+    tracking_id : UA-121680114-1  # Google Analytics id for the site
+    anonymize_ip: true # Anonymize IP tracking for Analytics
+
+
 
 ## => Build
 ##############################
@@ -174,5 +174,10 @@ plugins:
 # pagination
 paginate: 8
 
+## => Analytics
+##############################
+## Google Analytics
+# ga_tracking_id: UA-121680114-1 # Google Analytics id for the site
+# ga_anonymize_ip: false # Anonymize IP tracking for Analytics
 
 
