--- a/_config.yml
+++ b/_config.yml
@@ -118,11 +118,11 @@ leancloud:
 ## => Analytics
 ##############################
 analytics:
-  provider: google # false (default), "google", "custom"
+  provider: "google" # false (default), "google", "custom"
 
   ## Google Analytics
   google:
-    tracking_id : UA-121680114-1  # Google Analytics id for the site
+    tracking_id : "UA-121680114-1"  # Google Analytics id for the site
     anonymize_ip: true # Anonymize IP tracking for Analytics
 
 
